src/tui/snapshots/control_acceso__tui__visual_tests__CambioPassword_99x30_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                   
 BRISAS CLI                                                              Operador de prueba · ROOT 
 CONTROL DE ACCESO                          CAMBIAR MI CONTRASEÑA                            ··:·· 
 ───────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                   
                         CONTRASEÑA ACTUAL                                                         
                                                                                                   
                         ────────────────────────────────────────────────                          
                                                                                                   
                         CONTRASEÑA NUEVA                                                          
                                                                                                   
                         ────────────────────────────────────────────────                          
                                                                                                   
                         CONFIRMAR CONTRASEÑA NUEVA                                                
                                                                                                   
                         ────────────────────────────────────────────────                          
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
 Confirme su identidad antes de cambiar la contraseña                                              
 TAB/↑↓ Cambiar campo  ENTER Guardar  ESC Volver  F2 Salida rápida  CTRL+Q Cerrar sesión  F7 Tema  
                                                                                                   

=== estilos ===
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                                              " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONTROL DE ACCESO" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                    " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"      CAMBIAR MI CONTRASEÑA      " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                      " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"─────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONTRASEÑA ACTUAL                               " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                " fg=Rgb(196, 220, 199) bg=Black mod=BOLD
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONTRASEÑA NUEVA                                " fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONFIRMAR CONTRASEÑA NUEVA                      " fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                         " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                          " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"Confirme su identidad antes de cambiar la contraseña                                             " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"TAB/↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Cambiar campo  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ENTER" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Guardar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Volver  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CTRL+Q" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Cerrar sesión  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
